src/main/java/com/example/please/error/NoDateFoundException.java
package com.example.please.error;

public class NoDateFoundException extends RuntimeException{
    public NoDateFoundException() {
        super("No data found");
    }
}
